--- a/index.html
+++ b/index.html
@@ -206,11 +206,11 @@
       </div>
       <div class="image-container">
         <img
-          src="Images/Wallpapers/Wallpapers/rise-of-the-ronin-3840x2160-15534.jpg"
+          src="Images/Wallpapers/opel-manta-gse-elektromod-electric-cars-concept-cars-2021-7087x4724-5253.jpeg"
           alt="Image 9"
         />
         <a
-          href="Images/Wallpapers/Wallpapers/rise-of-the-ronin-3840x2160-15534.jpg"
+          href="Images/Wallpapers/opel-manta-gse-elektromod-electric-cars-concept-cars-2021-7087x4724-5253.jpeg"
           class="download-btn"
           download
           >Download</a
