Update to h3 index.html

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   </head>
   <body>
     <h1>Welcome to The WallPaper Hub</h1>
-    <h3>Feel free to click on any of the Images to download</h3>
+    <h3>Discover a vast collection of high-quality wallpapers to customize your devices. This site offers a diverse range of stunning images, from nature and landscapes to abstract art and technology, ensuring something for every taste. Easily browse, download and enjoy fresh backgrounds for your desktop.</h3>
 
     <div id="imageGallery">
       <div class="image-container">
