--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </style>
   </head>
   <body>
-    <h1>Welcome to The WallPaper Hub</h1>
+    <h1>Welcome to the WallPaper Hub</h1>
     <h4>Discover a vast collection of high-quality wallpapers to customize your devices. This site offers a diverse range of stunning images, from nature and landscapes to abstract art and technology, ensuring something for every taste. Easily browse, download and enjoy fresh backgrounds for your desktop.</h4>
 
     <div id="imageGallery">
