--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       }
 
       h1 {
-        color: #d7d4d9;
+        color: #ffffff;
         font-size: 50px;
         margin-bottom: 10px;
         padding: 10px;
@@ -22,7 +22,7 @@
       }
 
       h3 {
-        color: #d7d4d9;
+        color: #ffffff;
         font-size: 20px;
         margin-bottom: 20px;
         padding: 10px;
