--- a/index.html
+++ b/index.html
@@ -212,6 +212,42 @@
           >Download</a
         >
       </div>
+        <div class="image-container">
+        <img
+          src="Images/Wallpapers/call-of-duty-modern-warfare-2-2022-games-call-of-duty-3840x2160-8571.jpg"
+          alt="Image 10"
+        />
+        <a
+          href="Images/Wallpapers/call-of-duty-modern-warfare-2-2022-games-call-of-duty-3840x2160-8571.jpg"
+          class="download-btn"
+          download
+          >Download</a
+        >
+          </div>  
+           <div class="image-container">
+        <img
+          src="Images/Wallpapers/extraction-valley-pc-games-3840x2400-854.jpg"
+          alt="Image 11"
+        />
+        <a
+          href="Images/Wallpapers/extraction-valley-pc-games-3840x2400-854.jpg"
+          class="download-btn"
+          download
+          >Download</a
+        >
+          </div>
+           <div class="image-container">
+        <img
+          src="Images/Wallpapers/cyberpunk-girl-future-tech-futuristic-dope-3840x2160-6686.jpg"
+          alt="Image 12"
+        />
+        <a
+          href="Images/Wallpapers/cyberpunk-girl-future-tech-futuristic-dope-3840x2160-6686.jpg"
+          class="download-btn"
+          download
+          >Download</a
+        >
+     </div>
     </div>
   </body>
 </html>
