--- a/index.html
+++ b/index.html
@@ -248,6 +248,78 @@
           >Download</a
         >
      </div>
+         <div class="image-container">
+        <img
+          src="Images/Wallpapers/call-of-duty-black-ops-cold-war-2020-games-pc-games-5277x2735-2647.jpg"
+          alt="Image 13"
+        />
+        <a
+          href="Images/Wallpapers/call-of-duty-black-ops-cold-war-2020-games-pc-games-5277x2735-2647.jpg"
+          class="download-btn"
+          download
+          >Download</a
+        >
+      </div>
+        <div class="image-container">
+        <img
+          src="Images/Wallpapers/acer-predator-5120x2880-14323.jpg"
+          alt="Image 14"
+        />
+        <a
+          href="Images/Wallpapers/acer-predator-5120x2880-14323.jpg"
+          class="download-btn"
+          download
+          >Download</a
+        >
+        </div>
+          <div class="image-container">
+        <img
+          src="Images/Wallpapers/aloy-horizon-forbidden-west-2022-games-3840x2160-7931.jpg"
+          alt="Image 15"
+        />
+        <a
+          href="Images/Wallpapers/aloy-horizon-forbidden-west-2022-games-3840x2160-7931.jpg"
+          class="download-btn"
+          download
+          >Download</a
+        >
+      </div>
+         <div class="image-container">
+        <img
+          src="Images/Wallpapers/aloy-horizon-forbidden-west-3840x2160-8076.jpg"
+          alt="Image 16"
+        />
+        <a
+          href="Images/Wallpapers/aloy-horizon-forbidden-west-3840x2160-8076.jpg"
+          class="download-btn"
+          download
+          >Download</a
+        >
+      </div>
+         <div class="image-container">
+        <img
+          src="Images/Wallpapers/marvels-guardians-of-the-galaxy-peter-quill-star-lord-groot-3840x2160-6564.jpg"
+          alt="Image 17"
+        />
+        <a
+          href="Images/Wallpapers/marvels-guardians-of-the-galaxy-peter-quill-star-lord-groot-3840x2160-6564.jpg"
+          class="download-btn"
+          download
+          >Download</a
+        >
+      </div>
+        <div class="image-container">
+        <img
+          src="Images/Wallpapers/tom-clancys-rainbow-six-extraction-2022-games-pc-games-3840x2160-7255.jpg"
+          alt="Image 18"
+        />
+        <a
+          href="Images/Wallpapers/tom-clancys-rainbow-six-extraction-2022-games-pc-games-3840x2160-7255.jpg"
+          class="download-btn"
+          download
+          >Download</a
+        >
+      </div>
     </div>
   </body>
 </html>
